Nav bar on small screen fixed
I finally fixed the alignment of the elements on the nav bar when it is small screen. Finally I can sleep.

--- a/style.css
+++ b/style.css
@@ -241,6 +241,15 @@ nav ul li a:hover::after,
         width: 100%;
     }
 
+    #theme-toggle {
+        padding: 9px 0px;
+    }
+
+    .logo{
+        padding: 9px 0px;
+
+    }
+
     
     
 }
@@ -568,7 +577,7 @@ footer {
 
 .logo {
     width: 80px;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 
 }
 .col h2{
